--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
-<meta charset=utf8>
-<title>@rvdpas</title>
+<meta charset="utf-8">
+<style>
 
-<body>
-  <svg id="chart" width="960" height="960" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="index.js"></script>
-</body>
+.bar {
+  fill: steelblue;
+}
+
+.bar:hover {
+  fill: brown;
+}
+
+.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 200px;
+    padding: 8px;
+    font-size: 13px;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 4px;
+    pointer-events: none;
+}
+
+.tooltip .tooltip__item {
+    display: block;
+}
+
+
+</style>
+<svg width="960" height="500"></svg>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="script.js"></script>
