fix indenting lines

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 .tooltip {
     position: absolute;
-    text-align: center;
+    text-align: left;
     width: 200px;
     padding: 8px;
     font-size: 13px;
@@ -24,9 +24,9 @@
 
 .tooltip .tooltip__item {
     display: block;
+    max-width: 180px;
+    margin: 0 auto;
 }
-
-
 </style>
 <svg width="960" height="500"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
