--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,15 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style>
+<html>
+<head>
+    <meta charset=utf8>
+    <title>@rvdpas</title>
+</head>
 
-.bar {
-  fill: steelblue;
-}
+<body>
+    <svg id="chart" width="960" height="960" text-anchor="middle"></svg>
 
-.bar:hover {
-  fill: brown;
-}
-
-.tooltip {
-    position: absolute;
-    text-align: left;
-    width: 200px;
-    padding: 8px;
-    font-size: 13px;
-    background: lightsteelblue;
-    border: 0px;
-    border-radius: 4px;
-    pointer-events: none;
-}
-
-.tooltip .tooltip__item {
-    display: block;
-    max-width: 180px;
-    margin: 0 auto;
-}
-</style>
-<svg width="960" height="500"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="script.js"></script>
+
+</body>
+</html>
